Work in progress

--- a/style/components/_components.scss
+++ b/style/components/_components.scss
@@ -1,6 +1,6 @@
 
 /*///TAGS/////*/
-.films, .series, .jeux-video, .bd,
+.films, .series, .jeux-video, .bede,
 .animes, .allTags, .livres{
   font-weight: bold;  
   margin: 5px;
