--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -161,6 +161,14 @@
    z-index: 3;
    pointer-events: none;
  }
+ .maj{
+ 	background-color: red;
+ 	//border: 3px solid red;
+ 	//color : red;
+ 	color: $primary-color;
+
+ }
+
 
 
 
