--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -161,12 +161,12 @@ footer{
    a{
     padding: 10px;
     font-size: 140%;
-    margin: 0px 20px 0px 20px;;
+    margin: 0px 20px 0px 20px;
     @include self-text-align;
     color: $primary-color;
     border-radius: 5px;
-    background-color: $tertiary-color;
-    border: 1px solid $tertiary-color;
+    background-color: transparent;
+    //border: 1px solid transparent ;
     @include tablet-style{font-size: 160%;}
     @include mobile-style{font-size: 180%;}
     @include truemobile-style{font-size: 160%;}
@@ -174,7 +174,7 @@ footer{
         font-weight: bold; 
         color: $tertiary-color;
         background-color: $primary-color;
-        border: 1px solid $primary-color;
+        //border: 1px solid $primary-color;
         -webkit-transition: .5s;
         -o-transition: .5s;
         transition: .5s;
