--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -1,5 +1,4 @@
-/*///HEADER/////*/
-
+/*Header*/
 header{
   width: 100vw;
   max-width: 1300px;
@@ -61,142 +60,4 @@ header{
         .sub-logo{padding : 0;}
       }
     }
-}
-
-/*///CONTACT MODALS/////*/
-
-.bground2{
-  display: none;
-  position: fixed;
-  z-index: 100;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  overflow: auto;
-  background-color: $around-modal-bg-color;
-    .content2{
-      margin: 5% auto;
-      width: 100%;
-      max-width: 500px;
-      -webkit-animation-name: modalopen;
-      animation-name: modalopen;
-      -webkit-animation-duration: 0.8s;
-      animation-duration: 0.8s;
-      background: $tertiary-color;
-      border: 5px solid $primary-color;
-      -webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
-      box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
-      border-radius: 5px;
-      overflow: hidden;
-      position: relative;
-      padding-top: 20px;
-      p{
-        line-height: 90%;
-        font-size: 250%;
-        text-align: left;
-        font-weight: 600;
-      }    
-      .modal-body2{
-        margin: 15px auto;
-        -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-        @include justify-content-center;
-        .reaction{
-          padding: 10px;
-          @include flex-column;
-          @include justify-content-center;
-            h1{
-              width: 60%;            
-              padding: 5px 10px 5px 10px;
-              border: 1px solid $fourth-color;
-              background-color : $fourth-color;
-              color: $primary-color;
-              border-radius: 5px;
-              @include self-text-align; 
-              @include truemobile-style{width: 80%;}   
-            }
-            p{
-              font-size: 200%;
-              @include self-text-align;
-              color: $primary-color;
-              @include flex-wrap;
-              line-height: 120%;  
-              padding: 0px 20px 0px 20px; 
-              @include truemobile-style{font-size: 150%;}        
-            }  
-        }
-      }
-      @include mobile-style{max-width: 480px;}
-      @include truemobile-style{
-        max-width: 80vw;
-        min-width: 298px;;
-      }
-    }          
-  }
-
-.content2{
-      height: 100%;
-      max-height: 500px;
-      @include just-flex;
-      @include justify-content-center;
-      top: 40%;
-      -webkit-transform: translateY(-40%);
-      -ms-transform: translateY(-40%);
-      transform: translateY(-40%);
-}
-
-
-
-/*///FOOTER/////*/
-footer{
-  border-top: 4px solid $fourth-color;
-  border-radius: 2PX;
-  max-width: 1270px;
-  margin: auto;
-  padding: 15px;
-  @include just-flex;
-  @include justify-content-space-around;
-   a{
-    padding: 10px;
-    font-size: 140%;
-    margin: 0px 20px 0px 20px;
-    @include self-text-align;
-    color: $primary-color;
-    border-radius: 5px;
-    background-color: transparent;
-    //border: 1px solid transparent ;
-    @include tablet-style{font-size: 160%;}
-    @include mobile-style{font-size: 180%;}
-    @include truemobile-style{font-size: 160%;}
-      &:hover, &:active{
-        font-weight: bold; 
-        color: $tertiary-color;
-        background-color: $primary-color;
-        //border: 1px solid $primary-color;
-        -webkit-transition: .5s;
-        -o-transition: .5s;
-        transition: .5s;
-      }
-    }
-} 
-
-/*///MODAL ANIMATION/////*/
-
-@-webkit-keyframes modalopen {
-  from {
-    opacity: 0;
-    -webkit-transform: translateY(-150px);
-    transform: translateY(-150px);
-  }
-  to {opacity: 1;}
-}
-@keyframes modalopen {
-  from {
-    opacity: 0;
-    -webkit-transform: translateY(-150px);
-    transform: translateY(-150px);
-  }
-  to {opacity: 1;}
 }
