--- a/style/pages.scss
+++ b/style/pages.scss
@@ -1,15 +1,7 @@
 
-	/*****Import Order*****/
-
-/*utils (Variables/Fonctions/Mixins/Placeholders)*/	
 @import "utils/variablesAndMixins";
-/*vendors (NONE)*/
-/*Base (site specs, ex : fonts)*/
+@import "utils/animations";
 @import "base/base";
-/*components (independant blocks, ex : buttons)*/
 @import "components/components";
-/*layout (reusable blocks, ex: header, article, footer)*/
 @import "layout/layout";
-/*pages*/
 @import "pages/quizpage";
-/*themes (NONE)*/
