--- a/style/utils/_variablesAndMixins.scss
+++ b/style/utils/_variablesAndMixins.scss
@@ -1,18 +1,38 @@
-/*///VARIABLES & MIXINS/////*/
+/*VARIABLES*/
 
-/*///COLORS*/
-
-
-$primary-color:#ffcc00; //
-$secondary-color:#F19E1A; // 
-$tertiary-color:#1B3E4A; // 
+/*Colors*/
+$primary-color:#ffcc00;
+$secondary-color:#F19E1A;
+$tertiary-color:#1B3E4A; 
 $fourth-color: #2C6B80;
 $around-modal-bg-color:rgba(250, 250, 250, 0.4);
 
-/*///BREAKPOINTS*/
+/*Timer and spacing for animations*/
+$spacing: 2560px;
+$time-1: 60s;
+$time-2: 120s;
+$time-3: 180s;
+$time-4: 600s;
+
+/*Breakpoints*/
 $break-tablet:1199px;
 $break-mobile:820px;
 $break-truemobile:508px;
+
+/*MIXINS*/
+
+/*Particle Animation*/
+@function particles($max) {
+   $val: 0px 0px $primary-color;
+   @for $i from 1 through $max {
+      $val: #{$val},
+      random($spacing)+px random($spacing)+px $primary-color;
+   }
+   @return $val;
+}
+
+/*Breakpoints*/
+@mixin particles($max) {box-shadow: particles($max);}
 
 @mixin tablet-style{
 	@media screen and(max-width: $break-tablet){
@@ -33,7 +53,7 @@ $break-truemobile:508px;
 }
 
 
-/*///CONTENT STYLES*/
+/*Styles*/
 @mixin flex-row-centered{
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -126,7 +146,7 @@ $break-truemobile:508px;
 	flex-wrap: nowrap;
 }
 
-/*///IMAGES*/
+/*Image style*/
 
 @mixin portrait-style{
 -o-object-fit: cover;
@@ -144,29 +164,4 @@ margin : none;
 width: 220px;
 height: 220px;
 border-radius: 50%;
-}
-
-
-////////////////////////////
-
-//$color-bg: #111;
-$color-particle: $primary-color;
-$spacing: 2560px;
-$time-1: 60s;
-$time-2: 120s;
-$time-3: 180s;
-$time-4: 600s;
-
-/* Pauls awesome mixin */
-@function particles($max) {
-   $val: 0px 0px $color-particle;
-   @for $i from 1 through $max {
-      $val: #{$val},
-      random($spacing)+px random($spacing)+px $color-particle;
-   }
-   @return $val;
-}
-
-@mixin particles($max) {
-   box-shadow: particles($max);
 }
