--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -73,7 +73,7 @@
 /*QUIZCACRDS*/
 .QuizCard{
 	//margin: auto;
-	margin: 0px 30px 0px 30px;
+	margin: 0px 5px 0px 5px;//
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
