--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -1,30 +1,30 @@
 body{
     width: 100vw;
-	min-width: 341px;    
-	margin: auto;
-	background-color: $tertiary-color;
-	font-family:  lato, Arial, Verdana, sans-serif;
-	overflow-x: hidden;
-	a{
+    min-width: 341px;    
+    margin: auto;
+    background-color: $tertiary-color;
+    font-family:  lato, Arial, Verdana, sans-serif;
+    overflow-x: hidden;
+    a{
         text-decoration: none;
-		color: black;
-	}
-	@include mobile-style{
-		@include justify-content-center;
-		margin: 0;
-	}
+        color: black;
+    }
+    @include mobile-style{
+        @include justify-content-center;
+        margin: 0;
+    }
 }
 
 main{
-	@include just-flex;
-	width: 100vw;
-	max-width: 1300px;
-	padding: 25px;
-	@include flex-wrap;
-	margin: auto;
-	@include justify-content-center;
-	overflow: hidden;
-	@include mobile-style{padding: 25px 0px 25px 0px;}
+    @include just-flex;
+    width: 100vw;
+    max-width: 1300px;
+    padding: 25px;
+    @include flex-wrap;
+    margin: auto;
+    @include justify-content-center;
+    overflow: hidden;
+    @include mobile-style{padding: 25px 0px 25px 0px;}
 }
 
 /*Background animation*/
@@ -43,7 +43,8 @@ main{
         top: $spacing;
     }
     .particle-1 {
-        animation: animParticle $time-1 linear infinite;
+        -webkit-animation: animParticle $time-1 linear infinite;
+                animation: animParticle $time-1 linear infinite;
         @include particles(600);
         height: 1px;
         width: 1px;
@@ -54,7 +55,8 @@ main{
         }
     }
     .particle-2 {
-        animation: animParticle $time-2 linear infinite;
+        -webkit-animation: animParticle $time-2 linear infinite;
+                animation: animParticle $time-2 linear infinite;
         @include particles(200);
         height: 2px;
         width: 2px;
@@ -65,7 +67,8 @@ main{
         }
     }
     .particle-3 {
-        animation: animParticle $time-3 linear infinite;
+        -webkit-animation: animParticle $time-3 linear infinite;
+                animation: animParticle $time-3 linear infinite;
         @include particles(100);
         height: 3px;
         width: 3px;
@@ -76,7 +79,8 @@ main{
         }
     }
     .particle-4 {
-        animation: animParticle $time-4 linear infinite;
+        -webkit-animation: animParticle $time-4 linear infinite;
+                animation: animParticle $time-4 linear infinite;
         @include particles(400);
         height: 1px;
         width: 1px;
