--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -72,8 +72,8 @@
 
 /*QUIZCACRDS*/
 .QuizCard{
-	//margin: auto;
-	margin: 0px 5px 0px 5px;//
+	/*margin: auto;*/
+	margin: 0px 5px 0px 5px;/**/
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -235,7 +235,8 @@
   padding: 10px;
   text-align: center;
   font-weight: 1000;
-  box-shadow: 2px 2px 10px black;
+  -webkit-box-shadow: 2px 2px 10px black;
+          box-shadow: 2px 2px 10px black;
    position: absolute;
    right: 0%;
    top: 0%;
