--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -1,70 +1,147 @@
+/*LOADER*/
+
+.loader-background{
+	position: fixed;
+	width:100%;
+	height: 100%;
+	z-index: 999;	
+	@include flex-row-centered;
+	@include justify-content-center;
+	overflow-x: hidden;
+	visibility: hidden;
+	-webkit-animation: fadeout 3s ease-in-out forwards;
+	animation: fadeout 3s ease-in-out forwards;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	padding: 0px;	
+}
+
+.loader {
+	padding: 0px;
+  border: 16px solid $primary-color;
+  border-top: 16px solid $fourth-color;
+  border-radius: 50%;
+  width: 240px;
+  height: 240px;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;  
+  margin: auto;
+}
+
+@-webkit-keyframes spin{
+  0%{
+  	-webkit-transform: rotate(0deg);
+  	transform: rotate(0deg);
+  }
+  100%{
+  	-webkit-transform: rotate(360deg);
+  	transform: rotate(360deg);
+  }
+}
+
+@keyframes spin{
+  0%{
+  	-webkit-transform: rotate(0deg);
+  	transform: rotate(0deg);
+  }
+  100%{
+  	-webkit-transform: rotate(360deg);
+  	transform: rotate(360deg);
+  }
+}
+	
+@-webkit-keyframes fadeout{
+ 0%{
+ 	opacity: 0.80; 
+ 	visibility: visible;
+ } 
+ 100%{
+ 	opacity: 0;
+ 	z-index: -1;
+ 	visibility: hidden;
+ } 
+}
+	
+@keyframes fadeout{
+	0%{
+ 		opacity: 0.80;
+ 		visibility: visible;
+	}
+	100%{
+		opacity: 0;
+		z-index: -1;
+		visibility: hidden;
+	} 
+}
+
 /*ONLOAD ANIMATION*/
 
 /*Logo*/
 .bounce-in-top {
-	-webkit-animation: bounce-in-top 1.1s both;
-	        animation: bounce-in-top 1.1s both;
+	-webkit-animation: bounce-in-top 1.1s 2.2s both;
+	        animation: bounce-in-top 1.1s 2.2s both;
 }
 
 /*Tags*/
 .swing-in-top-fwd {
-	-webkit-animation: swing-in-top-fwd 0.85s cubic-bezier(0.175, 0.885, 0.320, 1.275) 0.75s both;
-	        animation: swing-in-top-fwd 0.85s cubic-bezier(0.175, 0.885, 0.320, 1.275) 0.75s both;
+	-webkit-animation: swing-in-top-fwd 0.85s cubic-bezier(0.175, 0.885, 0.320, 1.275) 2.95s both;
+	        animation: swing-in-top-fwd 0.85s cubic-bezier(0.175, 0.885, 0.320, 1.275) 2.95s both;
 }
 
 /*Quiz*/
 
 .flip-it0 {
-	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.1s both;
-	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.1s both;
+	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 3.3s both;
+	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 3.3s both;
 }
 .flip-it1 {
-	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.5s both;
-	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.5s both;
-}
-.flip-it2 {
-	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.9s both;
-	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 1.9s both;
-}
-.flip-it3 {
-	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 2.3s both;
-	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 2.3s both;
-}
-.flip-it4 {
-	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 2.7s both;
-	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 2.7s both;
-}
-.flip-it5 {
-	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 3.1s both;
-	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 3.1s both;
-}
-.flip-it6 {
 	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 3.5s both;
 	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 3.5s both;
 }
-.flip-it7 {
+.flip-it2 {
 	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 3.9s both;
 	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 3.9s both;
 }
-.flip-it8 {
+.flip-it3 {
 	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 4.3s both;
 	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 4.3s both;
 }
-.flip-it9 {
+.flip-it4 {
 	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 4.7s both;
 	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 4.7s both;
+}
+.flip-it5 {
+	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 5.1s both;
+	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 5.1s both;
+}
+.flip-it6 {
+	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 5.5s both;
+	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 5.5s both;
+}
+.flip-it7 {
+	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 5.9s both;
+	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 5.9s both;
+}
+.flip-it8 {
+	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 6.3s both;
+	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 6.3s both;
+}
+.flip-it9 {
+	-webkit-animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 6.7s both;
+	        animation: roll-in-blurred-left 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) 6.7s both;
 }
 
 /*Footer line*/
 .bounce-in-bottom {
-    -webkit-animation: bounce-in-bottom 1.1s both;
-            animation: bounce-in-bottom 1.1s both;
+    -webkit-animation: bounce-in-bottom 1.1s 2.2s both;
+            animation: bounce-in-bottom 1.1s 2.2s both;
 }
 
 /*Footer links*/
 .swing-in-bottom-fwd {
-    -webkit-animation: swing-in-bottom-fwd 0.85s cubic-bezier(0.175, 0.885, 0.320, 1.275) 0.75s both;
-            animation: swing-in-bottom-fwd 0.85s cubic-bezier(0.175, 0.885, 0.320, 1.275) 0.75s both;
+    -webkit-animation: swing-in-bottom-fwd 0.85s cubic-bezier(0.175, 0.885, 0.320, 1.275) 2.95s both;
+            animation: swing-in-bottom-fwd 0.85s cubic-bezier(0.175, 0.885, 0.320, 1.275) 2.95s both;
 }
 
 /*MAIN SECTION*/
